2004-11-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_class_init): 
	Doc additions.

	* gtk/gtkfilechooserbutton.h: Fix trigraphs in private markers.

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_class_init): 
	Fix a doc comment.

2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Remove a debug printf().  (#157087, Christian Persch)

	* gtk/gtkicontheme.c: Actually commit the "stat less" patch
	which appeared in the ChangeLog a few days ago.

	* gtk/gtkfilechooserbutton.c: Move some docs inline.

	* gtk/gtkaboutdialog.c (gtk_show_about_dialog): Doc update.

	* gtk/gtktextbuffer.c (gtk_text_buffer_backspace): Revalidate the
	iter.  (#156924, Murray Cumming)

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Don't crash on
	broken ClientMessage events.  (#157056, Owen Taylor)

	* gtk/gtkactiongroup.c (gtk_action_group_get_visible): Fix a typo in
	the docs.  (#157044, Masao Mutoh)

2004-10-31  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_button_state_changed): Update the
	state of the cell view when the state of the button changes (to 
	get prelighted drawing right).  (#138650, Frances Keenan, 
	Christian Persch)

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Don't force the height of the action area, we don't scroll 
	it anyway, and the current way of calculating the height can lead
	to broken display.  (#156573, Christian Persch)

	* tests/testentrycompletion.c (animation_timer): Don't try to
	remove stuff from an empty model.  (#156575, Christian Persch)

	* gtk/gtkentrycompletion.c (gtk_entry_completion_class_init): 
	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_class_init): 
	Update doc comments.

2004-10-31  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkglobals-win32.c
	* gdk/win32/gdkmain-win32.c: Remove _windows_version and the